test/functions/deitz/test_var_function1.good
test_var_function1.chpl:5: In function 'bar':
test_var_function1.chpl:5: error: Assigning to a constant expression
